# package-o-tron

./: Dump.lhs  LICENSE  Makefile  Makefilerize.lhs  README  ShowPackages.lhs  autorules.mk  package-o-tron.cabal  todo
Development/Pot/: Modules.lhs  Packages.lhs
Distribution/Pot/: Modules.lhs  Packages.lhs
exe-src/: CabalLint.lhs  Dump.lhs  DumpPackageDB.lhs  Makefilerize.lhs  ShowPackages.lhs
src/Distribution/Pot/: CabalLint.lhs  DeepDependencies.lhs  HaskellSourceParser.lhs  InstalledPackages.lhs  MakefileGen.lhs  Modules.lhs  Packages.lhs  RecursiveGetSources.lhs  Types.lhs
tools/: CabalLint.lhs  Dump.lhs  Dump2.lhs  DumpPackageDB.lhs  MakeHaskellMake.lhs  SavePackages.lhs  ShowPackages.lhs  SummarizeSources.lhs  TestHaskellSourceParser.lhs
