name:                package-o-tron
version:             0.2.0.0
synopsis:            Utilities for working with cabal packages and your package database

description:         Utility to help managing Makefiles for Haskell projects, a cabal lint
                     which can check the other-modules and build-deps
                     sections in your cabal files, and a quick command
                     that can show the direct package dependencies of
                     a set of Haskell source files. See the README in
                     the repo for more information:
                     <https://github.com/JakeWheat/package-o-tron>.


license:             BSD3
license-file:        LICENSE
author:              Jake Wheat
maintainer:          jakewheatmail@gmail.com
copyright:           Jake Wheat 2012
category:            Development
build-type:          Simple
cabal-version:       >=1.8

extra-source-files:  autorules.mk
                     LICENSE
                     README
                     Makefile

source-repository head
  type:     git
  location: https://github.com/JakeWheat/package-o-tron.git

library
  exposed-modules:  Distribution.Pot.DeepDependencies,
                    Distribution.Pot.InstalledPackages,
                    Distribution.Pot.RecursiveGetSources,
                    Distribution.Pot.Types
                    Distribution.Pot.CabalLint
  other-modules:    Distribution.Pot.HaskellSourceParser
  build-depends:    base >= 4 && < 5,
                    process,filepath,text,Cabal,split,directory,mtl,attoparsec,packdeps
  hs-source-dirs:   src

executable MakeHaskellMake
  build-depends:    base >= 4 && < 5,
                    filepath,time,text,split,package-o-tron
  main-is:          MakeHaskellMake.lhs
  hs-source-dirs:   tools

executable CabalLint
  build-depends:    base >= 4 && < 5,
                    text,package-o-tron
  main-is:          CabalLint.lhs
  hs-source-dirs:   tools

executable SavePackages
  build-depends:    base >= 4 && < 5,
                    filepath,filemanip,directory,split,text,process,package-o-tron
  main-is:          SavePackages.lhs
  hs-source-dirs:   tools
